@@ -1,3 +1,7 @@
+2016-12-22  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/anytime.R (anydate, utcdate): Ensure Date object is returned
+
 2016-12-21  Dirk Eddelbuettel  <edd@debian.org>
 
 	* tests/simpleTests.R: More tests
